[gd_scene load_steps=5 format=3 uid="uid://c8vtvh1givx4k"]

[ext_resource type="Script" path="res://Ranged_Logic.gd" id="1_5r085"]
[ext_resource type="Texture2D" uid="uid://wphvbpbferp5" path="res://skull-emoji.png" id="2_thqj5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikbja"]
size = Vector2(63, 77)

[sub_resource type="CircleShape2D" id="CircleShape2D_ro2e7"]
radius = 202.04

[node name="Ranged" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_5r085")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 1.5)
shape = SubResource("RectangleShape2D_ikbja")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.999992, 2)
scale = Vector2(0.133791, 0.12793)
texture = ExtResource("2_thqj5")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(1, 4)
shape = SubResource("CircleShape2D_ro2e7")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
